--- a/view/login.html
+++ b/view/login.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="nav.css">
 <nav class="navbar">
 <ul>
-<h1>mee canteen<h1>
+<h1>CMR CANTEEN<h1>
 </ul>
 </nav>
 <body class="bodystyle">
