--- a/view/login.html
+++ b/view/login.html
@@ -7,40 +7,17 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
 </head>
-<link rel="stylesheet" href="nav.css">
-<nav class="navbar">
-<ul>
-<h1>mee canteen<h1>
-</ul>
-</nav>
+<link rel="stylesheet" href="sign.css">
 <body class="bodystyle">
-<div id="carouselExampleControls" class="carousel slide " data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100 imgs" src="./images/cmr.png"  alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100 imgs" src="./images/can.jpg" alt="Second slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-
-<div class="loginbox">
-    <div class="login">
+  <h1 class="head">CMR Canteen</h1>
+<div class="signbox">
+    <div class="signup">
                 <form action="/signin" method="POST">
                     <h1>LOGIN</h1>
                     <label  for="name">Enter Name:</label>
-                    <input type="text" name="name" id="name" required minlength="10" maxlength="10"><br></br>
+                    <input type="text" class="inputf" name="name" id="name" required minlength="5" maxlength="10"><br></br>
                     <label for="nam">Enter Password:</label>
-                    <input type="password" name="password" id="nam" required minlength="8"><br/><br/>
+                    <input type="password" class="inputf" name="password" id="nam" required minlength="8"><br/><br/>
                     <button class="loginbtn" type="submit">login</button>
                     <a href="sign.html">signup</a>
                 </form>
