--- a/view/login.html
+++ b/view/login.html
@@ -9,10 +9,11 @@
 </head>
 <link rel="stylesheet" href="sign.css">
 <body class="bodystyle">
-  <h1 class="head">CMR Canteen</h1>
+  
 <div class="signbox">
     <div class="signup">
                 <form action="/signin" method="POST">
+                  <h1 style="padding-bottom: 5px;color:coral;border: 3px solid#a18cd1;border-radius: 18px;padding-left: 3vh;padding-top: 1vh;">CMR Canteen</h1>
                     <h1>LOGIN</h1>
                     <label  for="name">Enter Name:</label>
                     <input type="text" class="inputf" name="name" id="name" required minlength="5" maxlength="10"><br></br>
